tests/errors/init1.f90
program init1
integer x = 1
end
